--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@
     background-color: #533944;
     background-position: center;
     background-size: cover;
-    padding: 50px;
+    padding: 60px;
     }
 
 .foto-hlavicka {
     width: 180px;
     float: right;
-    position: sticky;
-    margin-left: 0 0 30px 30px;
+    position: sticky; 
     border-style: double;
     border-width: 5px;
     border-color: #473d40;
     }
 
+    
 body {
     color: #473d40;
     background-color: #fff1f7;
@@ -34,7 +34,6 @@ h1 {
 h2 {
     font-size: 30px;
     text-align: left;
-    margin-top: 0;
     display: block;
     font-weight: bold;
     text-decoration-line: underline;
@@ -49,18 +48,13 @@ h4 {
 }
 
 section {
-    padding: 20px;
+    padding: 40px 10%;
     overflow: auto;
-    
-
 }
 
 
 .zakladniinformace p {
-    padding: 10px;
-    margin: 30px;
-    float: left;
-        
+
 }
 
 .zakladniinformace a {
@@ -78,6 +72,7 @@ section {
     background-position: center;
     background-size: cover; 
 }
+
 .paticka a {
     color: rgb(253, 254, 255);
 }
@@ -88,6 +83,5 @@ section {
     padding: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
-    color: rgb(253, 254, 255);
-       
+    color: rgb(253, 254, 255);     
 }
